<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DCC</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="news">News Feed</string>
    <string name="calendar">Calender</string>
    <string name="photo">Photo Gallery</string>
    <string name="report">eReport</string>
    <string name="action">Action Items</string>
    <string name="directory">Directory</string>
    <string name="login_title">Log in to virtualdiscoverycenter.net</string>
    <string name="login_title2">Enter Your UserName and Password below.</string>
    <string name="UserName">UserName</string>
    <string name="Password">Password</string>
    <string name="Cancel">Cancel</string>
    <string name="Login">Login</string>
    <string name="title_article_detail">Post Detail</string>
    <string name="title_article_list">NerdAbility Reader</string>
    <string name="btn_offline_reading">Save for later</string>
    <string name="btn_mark_unread">Mark unread</string>
    <string name="btn_refresh">Refresh</string>
    <string name="android_sax">Android SAX</string>
    <string name="sax">Classic SAX</string>
    <string name="dom">DOM</string>
    <string name="pull">XML Pull</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_launch">LaunchActivity</string>
    <string name="title_activity_student_select">StudentSelectActivity</string>
    <string name="studentselect">Select Students</string>
    <string name="teamselect">Select Teams</string>
    <string name="keywordselect">Select Keywords</string>
    <string name="wordselect">Keyword Search</string>
    <string name="search">Search</string>
    <string name="selectprogram">View Entire Program</string>
    <string name="sstext">Select one or more students, and a time range (default is entire session).</string>
    <string name="choosedate">Select Time Period</string>
    <string name="title_activity_team_select">TeamSelect</string>
    <string name="title_activity_keyword_select">KeywordSelect</string>
    <string name="title_activity_program_view">ProgramView</string>
    <string name="addrmvkeywrd">Add a Keyword</string>
    <string name="survey">Create a Survey</string>
    <string name="title_activity_program_select">ProgramSelect</string>
    <string name="title_activity_create_survey">CreateSurvey</string>
    <string name="surveyname">Name the survey</string>
    <string name="surveyquestion">Enter the question&#8230;</string>
    <string name="sendsurvey">Create Survey</string>
    <string name="surveyduedate">Survey due date (ex. 12/8/13)</string>
    <string name="surveyduetime">Survey due time (ex. 11:00pm)</string>
    <string name="createsurveyanswer">Create a survey response</string>
    <string name="previoussurvey">Choose from a previous survey</string>
    <string name="title_activity_manage_survey">ManageSurvey</string>
    <string name="managesurvey">Manage Surveys</string>
    <string name="title_activity_time_select">Choose a time period</string>
    <string name="timeend">End Date (mmddyy)</string>
    <string name="timestart">Start Date (mmddyy)</string>
    <string name="timeselect">Time Range Search</string>
    <string name="title_activity_search">Search</string>
    <string name="addkeyword">Add a new keyword</string>
    <string name="view_autorank">View Autorank</string>
    <string name="view_report_type">View by Report Type</string>
    <string name="title_activity_auto_rank">AutoRank</string>
    <string name="title_activity_report_type">ReportType</string>
    <string name="fiftysevencheck">0:57</string>
    <string name="edailycheck">eDaily</string>
    <string name="ereportcheck">eReport</string>
    <string name="choosereport">Select the types of reports you would like to view:</string>
    <string name="title_activity_meta_search">Director\'s Command Center: Search</string>
    <string name="metasearch">Search Reports</string>
    <string name="title_activity_search_results">Search Results</string>
    <string name="blanktext">Nothing here yet!\nPress the Add a Keyword button in the bottom left to add keywords.</string>
    <string name="addkeywordshint">Nothing here yet! Press the &quot;Add a Keyword&quot; button in the bottom left to add keywords.</string>
    <string name="title_activity_temp_search">Search Results</string>
    <string name="todaybtn">View Today\'s Reports</string>
    <string name="title_activity_admin">Admin</string>
    <string name="sortchecks">Sort Keyfile:</string>
    <string name="setstartdatetext">Set the start date:</string>
    <string name="setstartdatehint">Start Date   (mmddyy)</string>
    <string name="addteamhint">ex. Morpheus</string>
    <string name="addteamtext">Add a new Project:</string>
    <string name="update">Update</string>
    <string name="title_activity_update_task">Update Task</string>
    <string name="admin_startdate_button">Change Start Date</string>
    <string name="search_end_date">Change End Date</string>
    <string name="student_title">Students:</string>
    <string name="team_title">Teams:</string>
    <string name="keyword_title">Keywords:</string>
    <string name="removestudents">Select students to remove:</string>
    <string name="removeteams">Select Teams to remove:</string>
    <string name="title_activity_edit_students">Edit Students</string>
    <string name="editStudents">Select Student to Edit</string>
    <string name="editStudentsbtn">Edit Students</string>
    <string name="Fname">First Name:</string>
    <string name="Lname">Last Name:</string>
    <string name="Email">Email:</string>
    <string name="mngkeywrds">Manage Keywords</string>
    <string name="title_activity_keyword_uploader">KeywordUploader</string>
    <string name="blank"></string>
    <string name="back">Cancel</string>
    <string name="todays">Today</string>
    <string name="tomorrows">Tomorrow</string>
    <string name="send">Send</string>
    <string name="date">Date</string>
    <string name="datehint">MMDDYYYY</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="record">Record</string>
    <string name="title">Title</string>
    <string name="text">Text</string>
    <string name="directorEmail">Director\'s Email</string>
    <string name="teamLeadEmail">Team Lead\'s Email</string>
    <string name="studentNum">Student Number</string>
    <string name="studentName">Student Name</string>
    <string name="setDefault">Set Default Options</string>
    <string name="done">Done</string>
    <string name="upload">Upload</string>
    <string name="programName">Program Name (ie. S2013, Y2014)</string>
    <string name="teamName">Team Name</string>
    <string name="edailydescrip">Make a new eDaily Button</string>
    <string name="today">Enter Today\'s Accomplishments here&#8230;</string>
    <string name="tomorrow">Enter Tomorrow\'s Goals here&#8230;</string>
    <string name="title_activity_ereport">eReport</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="title_activity_launcher">Launcher</string>
    <string name="edaily">eDaily</string>
    <string name="ereport">eReport</string>
    <string name="fiftyseven">Record a 0:57</string>
    <string name="twofiftyseven">Record a 2:57</string>
    <string name="zerotime">00:00</string>
    <string name="title_activity_video_recorder">eNoteBook</string>
    <string name="title_activity_record057">eNoteBook</string>
    <string name="review">Review Reports</string>
    <string name="dirEmail">Robert.Williams@wpafb.af.mil</string>
    <string name="xxx">Student Number (XXX)</string>
    <string name="defaultText">Student info not Set!\nWould you like to set it now?\n\nReports will not be properly formatted until this is set!\n\nStudent info can always be accessed from  the settings in the top right.</string>
    <string name="addstudent">Add Student to Database</string>
    <string name="title_activity_add_student">eNoteBook</string>
    <string name="fname">First Name:</string>
    <string name="lname">Last Name:</string>
    <string name="email">Email:</string>
    <string name="addstudentButton">Add</string>
    <string name="project1">First Project</string>
    <string name="project2">Second Project</string>
    <string name="studentemail">Your Email</string>
    <string name="ereportText">Days left blank will be automatically filled with, \"I did nothing on the project today.\"</string>
    <string name="first_proj">First Project:</string>
    <string name="second_proj">Second Project:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sentfromdcc">--Sent from DCC App</string>
    <string name="lt"><![CDATA[<]]></string>
    <string name="gt"><![CDATA[>]]></string>
    <string name="eq">=</string>
    <string name="dep">Dep:</string>
    <string name="rel">Rel:</string>
    <string name="Start">Start</string>
    <string name="daterange">Date Range:</string>
    <string name="end">End:</string>
    <string name="iss">Iss:</string>
    <string name="handle">Handle</string>
    <string name="contact">Contact</string>
    <string name="project21">Project2:</string>
    <string name="project12">Project1:</string>
    <string name="namecol">Name:</string>
    <string name="personaltitle">Personal</string>
    <string name="handlecol">Handle:</string>
    <string name="usrname">User Name</string>
    <string name="memberinfo">Member Info</string>
    <string name="usericon">User Icon</string>
    <string name="usercol">User:</string>
    <string name="scorecol">Score:</string>
    <string name="typehere">Type Here</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="status">status</string>
    <string name="Description">Description</string>
    <string name="DateDue">Date Due</string>
    <string name="at"> at </string>
    <string name="Time">Time</string>
    <string name="Namecol">Name:</string>
    <string name="Datep">Date:</string>
    <string name="depd">DEP-</string>
    <string name="pound">#</string>
    <string name="reld">REL-</string>
    <string name="ISS">ISS</string>

</resources>