<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/ereportText"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/sunday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:hint="@string/sunday"
            android:inputType="textMultiLine" />

        <EditText
            android:id="@+id/monday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:hint="@string/monday"
            android:inputType="textMultiLine" />

        <EditText
            android:id="@+id/tuesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:hint="@string/tuesday"
            android:inputType="textMultiLine" />

        <EditText
            android:id="@+id/wednesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:hint="@string/wednesday"
            android:inputType="textMultiLine" />

        <EditText
            android:id="@+id/thursday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:hint="@string/thursday"
            android:inputType="textMultiLine" />

        <EditText
            android:id="@+id/friday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:hint="@string/friday"
            android:inputType="textMultiLine" />

        <EditText
            android:id="@+id/saturday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:hint="@string/saturday"
            android:inputType="textMultiLine" />

        <!--
             This View used to set button at bottom of ScrollView 
        	 in a layout that is no full
        -->

        <View
            android:layout_width="wrap_content"
            android:layout_height="0dip"
            android:layout_weight="1" />

        <Button
            android:id="@+id/sendEreportButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/send"
            android:textColor="@android:color/black"/>
    </LinearLayout>
</ScrollView>