<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10sp" >
 
    <EditText
        android:id="@+id/login_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/blank"
        android:hint="@string/UserName"
        android:singleLine="true" >
        <requestFocus />
    </EditText>
 
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/blank"
        android:ems="10"
        android:inputType="textPassword" >
    </EditText>
 
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
 
        <Button
            android:id="@+id/btn_login"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/Login"
 		/>
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/btn_login"
            android:text="@string/Cancel" />
    </RelativeLayout>
 
</LinearLayout>