<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="@drawable/text_selector">

    <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:id="@+id/actionitemimageView"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:contentDescription="@string/status"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Description"
            android:id="@+id/actionitemdescription"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/actionitemimageView"
            android:layout_above="@+id/actionitemdate"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/DateDue"
            android:id="@+id/actionitemdate"
            android:layout_alignBottom="@+id/actionitemimageView"
            android:layout_toRightOf="@+id/actionitemimageView"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/at"
            android:id="@+id/textView"
            android:layout_alignTop="@+id/actionitemdate"
            android:layout_toRightOf="@+id/actionitemdate"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Time"
            android:id="@+id/actionitemstime"
            android:layout_alignTop="@+id/textView"
            android:layout_toRightOf="@+id/textView"/>
</RelativeLayout>